--- a/css/all.css
+++ b/css/all.css
@@ -3346,7 +3346,7 @@ body {
 
 .mainNews .mainNews_t .news_list li .newsList_img {
   width: 110px;
-  height: calc((410px - 40px) /5);
+  height: calc((410px - 40px) / 5);
   background: no-repeat center top / cover;
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -3828,7 +3828,7 @@ body {
 }
 
 .newsCnt {
-  padding: 20px;
+  padding: 20px 20px 50px;
   margin: auto;
   color: #333;
   background-color: #fff;
@@ -3919,12 +3919,28 @@ body {
   margin-top: 50px;
 }
 
-.newsCnt_menu p {
+.newsCnt_menu li p {
   padding-top: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
 }
 
 .newsCnt_menu li + li {
   margin-top: 20px;
+}
+
+.newsCnt_menu .newsCnt_scroll {
+  height: 700px;
+  overflow-y: scroll;
+}
+
+.newsCnt_menu .newsCnt_scroll::-webkit-scrollbar {
+  width: 10px;
 }
 
 .broadcast .liveBox {
@@ -5515,9 +5531,21 @@ body {
 
 .resourcesBox .bank-tb td {
   width: 10%;
-  padding: 20px;
+  height: 95px;
   border: 1px solid #ccc;
   cursor: pointer;
+}
+
+.resourcesBox .bank-tb td a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .resourcesBox .bank-tb .bankTb-img {
