--- a/css/_broadcast.scss
+++ b/css/_broadcast.scss
@@ -83,10 +83,18 @@
     .videoBox {
         display: flex;
         margin-top: 0;
+        @include rwd(1000){
+            flex-direction: column;
+        }
     }
     .gameShow {
         width: calc(100% - 350px);
         padding-right: 20px;
+        @include rwd(1000){
+           width: 100%;
+           padding-right: 0;
+        }
+
         .main {
             height: 0;
             padding-bottom: calc(100% / 1.775);
@@ -117,6 +125,10 @@
                 z-index: 2;
                 cursor: pointer;
                 transition: 0.3s;
+                @include rwd(550){
+                    width: 30px;
+                    height: 30px;
+                }
                 &:active {
                     opacity: 1;
                 }
@@ -180,6 +192,10 @@
                 font-size: 1rem;
                 line-height: 22px;
                 font-weight: bold;
+
+                @include rwd(550){
+                    display: none;
+                }
                 span {
                     color: #888;
                     font-weight: normal;
@@ -197,11 +213,27 @@
         width: 350px;
         display: flex;
         flex-direction: column;
+        @include rwd(1000){
+            width: 100%;
+            flex-direction: row;
+        }
+        @include rwd(720){
+            flex-direction: column;
+        }
+
         & > div {
             flex: 1;
         }
         & > div + div {
             margin-top: 10px;
+            @include rwd(1000){
+                margin-top: 0;
+                margin-left: 20px;
+            }
+            @include rwd(720){
+                margin-top: 10px;
+                margin-left: 0;
+            }
         }
         .gameChart {
             select {
