--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -1,6 +1,7 @@
 // resourcesBox start 資源頁(銀行&投注連結)
 .resourcesBox {
     .res-Title {
+        padding-left: 5px;
         margin-bottom: 15px;
         display: flex;
         align-items: center;
@@ -24,9 +25,24 @@
             width: calc(100% / 6);
             min-height: 55px;
             padding: 10px;
-           
             cursor: pointer;
-            transition: 0.3s;
+            transition: background-color .5s ;
+            @include rwd(1199){
+                width: calc(100% / 5);
+            }
+            @include rwd(999){
+                width: calc(100% / 4);
+            }
+            @include rwd(799){
+                width: calc(100% / 3);
+            }
+            @include rwd(599){
+                width: calc(100% / 2);
+            }
+            @include rwd(399){
+                width: 100%;
+            }
+            
             a{
                 height: 100%;    
                 display: flex;
@@ -67,11 +83,21 @@
         table {
             width: 100%;
         }
+        tr{
+            @include rwd(500){
+                display: flex;
+                flex-direction: column;
+            }
+        }
         td {
-            width: 10%;
             height: 95px;
             border: 1px solid #ccc;
             cursor: pointer;
+            @include rwd(500){
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
             a{
                 display: flex;
                 align-items: center;
@@ -95,8 +121,13 @@
         table {
             width: 100%;
         }
+        tr{
+            @include rwd(800){
+                display: flex;
+                flex-direction: column;
+            }
+        }
         td {
-            width: 10%;
             padding: 20px 20px;
             border: 1px solid #ccc;
             color: #000;
@@ -150,7 +181,6 @@
             }
         }
         @at-root .Answer {
-            padding-right: 40px;
             display: flex;
             .icon {
                 color: #151412;
