--- a/css/all.css
+++ b/css/all.css
@@ -1285,7 +1285,7 @@ body {
   position: relative;
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 1250px) {
   .header {
     min-height: auto;
   }
@@ -1354,11 +1354,6 @@ body {
   .header .hd_top .hd_tool {
     -ms-flex-item-align: end;
         align-self: flex-end;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .header .hd_top .hd_tool {
     padding-bottom: 0px;
   }
 }
@@ -1881,6 +1876,13 @@ body {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .leftTool, .mainCnt .contBox-full .leftTool.on {
+    width: 50px;
+    opacity: 0.8;
+  }
+}
+
 .mainCnt .contBox-full .rightTool {
   right: -90px;
 }
@@ -1902,18 +1904,33 @@ body {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .rightTool, .mainCnt .contBox-full .rightTool.on {
+    width: 50px;
+    bottom: 245px;
+    opacity: 0.8;
+  }
+}
+
 .mainCnt .contBox-full .rightTool .todayGame {
   width: 100%;
   position: absolute;
 }
 
 .mainCnt .contBox-full .rightTool .todayGame .god {
-  width: 220px;
-  left: -60px;
+  width: 160px;
+  left: -30px;
   cursor: pointer;
   position: relative;
   -webkit-animation: pudding 1s infinite linear;
           animation: pudding 1s infinite linear;
+}
+
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .rightTool .todayGame .god {
+    width: 80px;
+    left: -13px;
+  }
 }
 
 .mainCnt .contBox-full .floatAd > img {
@@ -1935,6 +1952,14 @@ body {
   background-color: #282828;
   border-radius: 50%;
   cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .getGift {
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+  }
 }
 
 .mainCnt .contBox-full .goTop {
@@ -1959,6 +1984,25 @@ body {
   width: 20px;
   height: 20px;
   margin-right: 5px;
+}
+
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .goTop img {
+    width: 32px;
+    height: 32px;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mainCnt .contBox-full .goTop {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  .mainCnt .contBox-full .goTop span {
+    display: none;
+  }
 }
 
 .mainCnt::before {
@@ -2480,6 +2524,7 @@ body {
 }
 
 .betList .betTitle {
+  padding-left: 10px;
   margin-bottom: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3257,7 +3302,7 @@ body {
 }
 
 .mainMsg {
-  padding: 20px;
+  padding: 20px 20px 50px;
   background-color: #fff;
 }
 
@@ -3903,9 +3948,25 @@ body {
   }
 }
 
+@media screen and (max-width: 900px) {
+  .newsCnt {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .newsCnt_main {
   width: calc(100% - 300px);
   margin-right: 20px;
+}
+
+@media screen and (max-width: 900px) {
+  .newsCnt_main {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .newsCnt_main .newstitle p {
@@ -3975,8 +4036,53 @@ body {
   width: 300px;
 }
 
+@media screen and (max-width: 900px) {
+  .newsCnt_menu {
+    width: 100%;
+    padding-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .newsCnt_menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .newsCnt_menu > div {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .newsCnt_menu > div {
+    width: 100%;
+  }
+}
+
 .newsCnt_menu > div + div {
   margin-top: 50px;
+}
+
+@media screen and (max-width: 900px) {
+  .newsCnt_menu > div + div {
+    margin-top: 0;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .newsCnt_menu > div + div {
+    margin-left: 0;
+    margin-top: 50px;
+  }
 }
 
 .newsCnt_menu li p {
@@ -3988,6 +4094,14 @@ body {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   white-space: normal;
+}
+
+.newsCnt_menu li .img {
+  height: 0;
+  padding-bottom: 65%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
 }
 
 .newsCnt_menu li + li {
@@ -4993,17 +5107,40 @@ body {
 }
 
 .newsRef_box {
+  padding: 20px 20px 50px;
+  margin: auto;
+  color: #000;
+  background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 40px 40px 100px;
-  color: #000;
-  background-color: #fff;
+}
+
+@media screen and (max-width: 1280px) {
+  .newsRef_box {
+    width: calc(100% - 20px);
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .newsRef_box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .newsRef_cnt {
   width: calc(100% - 300px);
   margin-right: 20px;
+}
+
+@media screen and (max-width: 900px) {
+  .newsRef_cnt {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .newsRef_cnt > div + div {
@@ -5160,8 +5297,53 @@ body {
   width: 300px;
 }
 
+@media screen and (max-width: 900px) {
+  .newsRef_menu {
+    width: 100%;
+    padding-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .newsRef_menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .newsRef_menu > div {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .newsRef_menu > div {
+    width: 100%;
+  }
+}
+
 .newsRef_menu > div + div {
   margin-top: 50px;
+}
+
+@media screen and (max-width: 900px) {
+  .newsRef_menu > div + div {
+    margin-top: 0;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .newsRef_menu > div + div {
+    margin-left: 0;
+    margin-top: 50px;
+  }
 }
 
 .newsRef_menu p {
@@ -5557,6 +5739,7 @@ body {
 }
 
 .resourcesBox .res-Title {
+  padding-left: 5px;
   margin-bottom: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5594,8 +5777,38 @@ body {
   min-height: 55px;
   padding: 10px;
   cursor: pointer;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-transition: background-color .5s;
+  transition: background-color .5s;
+}
+
+@media screen and (max-width: 1199px) {
+  .resourcesBox .resList-list li {
+    width: calc(100% / 5);
+  }
+}
+
+@media screen and (max-width: 999px) {
+  .resourcesBox .resList-list li {
+    width: calc(100% / 4);
+  }
+}
+
+@media screen and (max-width: 799px) {
+  .resourcesBox .resList-list li {
+    width: calc(100% / 3);
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .resourcesBox .resList-list li {
+    width: calc(100% / 2);
+  }
+}
+
+@media screen and (max-width: 399px) {
+  .resourcesBox .resList-list li {
+    width: 100%;
+  }
 }
 
 .resourcesBox .resList-list li a {
@@ -5652,11 +5865,36 @@ body {
   width: 100%;
 }
 
+@media screen and (max-width: 500px) {
+  .resourcesBox .bank-tb tr {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .resourcesBox .bank-tb td {
-  width: 10%;
   height: 95px;
   border: 1px solid #ccc;
   cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+  .resourcesBox .bank-tb td {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .resourcesBox .bank-tb td a {
@@ -5690,8 +5928,19 @@ body {
   width: 100%;
 }
 
+@media screen and (max-width: 800px) {
+  .resourcesBox .lottory-tb tr {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .resourcesBox .lottory-tb td {
-  width: 10%;
   padding: 20px 20px;
   border: 1px solid #ccc;
   color: #000;
@@ -5761,7 +6010,6 @@ body {
 }
 
 .Answer {
-  padding-right: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
