--- a/css/_main.scss
+++ b/css/_main.scss
@@ -440,6 +440,7 @@ body {
                 .god {
                     width: 160px;
                     left: -30px;
+                    top: 5px;
                     cursor: pointer;
                     position: relative;
                     animation: pudding 1s infinite linear;
