--- a/css/_newsRef.scss
+++ b/css/_newsRef.scss
@@ -34,11 +34,13 @@
             color: #282828;
         }
         .txtDate {
-            padding: 10px;
+            padding: 8px 5px;
             font-size: 0.85rem;
             text-align: right;
-            color: #999999;
-            background-color: #e5e5e5;
+            color: #999;
+            background-color: #f2f2f2;
+            border-top: 1px solid #c5c5c5;
+            border-bottom: 1px solid #c5c5c5;
         }
     }
     .color-b {
