--- a/css/_broadcast.scss
+++ b/css/_broadcast.scss
@@ -259,6 +259,14 @@
                 max-height: 310px;
                 overflow-y: scroll;
                 border: 1px solid #eaeaea;
+                &::-webkit-scrollbar {
+                    width: 10px;
+                }
+                &::-webkit-scrollbar-thumb {
+                    background-color: #c1c1c1;
+                    border: 3px #f1f1f1 solid;
+                    border-radius: 10px;
+                }
                 table {
                     width: 100%;
                     color: #181c27;
@@ -313,6 +321,14 @@
                 max-height: 360px;
                 border: 1px solid #eaeaea;
                 overflow-y: scroll;
+                &::-webkit-scrollbar {
+                    width: 10px;
+                }
+                &::-webkit-scrollbar-thumb {
+                    background-color: #c1c1c1;
+                    border: 3px #f1f1f1 solid;
+                    border-radius: 10px;
+                }
                 table {
                     width: 100%;
                     color: #181c27;
