--- a/css/all.css
+++ b/css/all.css
@@ -2341,7 +2341,8 @@ body {
 }
 
 @-webkit-keyframes load_txt {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 0.5;
   }
   50% {
@@ -2350,7 +2351,8 @@ body {
 }
 
 @keyframes load_txt {
-  0%, 100% {
+  0%,
+  100% {
     opacity: 0.5;
   }
   50% {
